# stm32f401-blinky

./: .gitignore  Cargo.toml  Embed.toml  README.md  openocd.cfg
.cargo/: config
src/: device.rs  main.rs
