[package]
name = "blinky"
version = "0.1.0"
authors = ["Jim Crossley <jim@crossleys.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.7"
panic-halt = "0.2.0"
stm32f0xx-hal =  { version = "0.12.0", features = ["stm32f091"]}

[profile.release]
debug = true
lto = true
opt-level = "s"